Chat is now handled immediately, and not just during a pulse (required to get live feedback about cast results); Added zone based ignore pattern